wip addressing reviewers' comments

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -772,3 +772,25 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
   year={2023},
   publisher={Oxford University Press US}
 }
+
+@article{Li2022,
+  title={Evolution of cooperation through cumulative reciprocity},
+  author={Li, Juan and Zhao, Xiaowei and Li, Bing and Rossetti, Charlotte SL and Hilbe, Christian and Xia, Haoxiang},
+  journal={Nature Computational Science},
+  volume={2},
+  number={10},
+  pages={677--686},
+  year={2022},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{Rapoport2015,
+  title={Is tit-for-tat the answer? On the conclusions drawn from Axelrod's tournaments},
+  author={Rapoport, Amnon and Seale, Darryl A and Colman, Andrew M},
+  journal={PloS one},
+  volume={10},
+  number={7},
+  pages={e0134128},
+  year={2015},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
