--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -794,3 +794,24 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
   year={2015},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+
+@article{Gong:IEEE:2019,
+  title={Diversity in machine learning},
+  author={Gong, Zhiqiang and Zhong, Ping and Hu, Weidong},
+  journal={Ieee Access},
+  volume={7},
+  pages={64323--64350},
+  year={2019},
+  publisher={Ieee}
+}
+
+@article{Bishop1995,
+  title={Training with noise is equivalent to Tikhonov regularization},
+  author={Bishop, Chris M},
+  journal={Neural computation},
+  volume={7},
+  number={1},
+  pages={108--116},
+  year={1995},
+  publisher={MIT Press}
+}
