include reference to statements

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -815,3 +815,32 @@ Conference on the Simulation of Adaptive Behavior (SAB-2000)},
   year={1995},
   publisher={MIT Press}
 }
+
+@article{Hofbauer2003,
+  title={Evolutionary game dynamics},
+  author={Hofbauer, Josef and Sigmund, Karl},
+  journal={Bulletin of the American mathematical society},
+  volume={40},
+  number={4},
+  pages={479--519},
+  year={2003}
+}
+
+
+@article{Binmore1987,
+  title={Modeling rational players: Part I},
+  author={Binmore, Ken},
+  journal={Economics \& Philosophy},
+  volume={3},
+  number={2},
+  pages={179--214},
+  year={1987},
+  publisher={Cambridge University Press}
+}
+
+@book{Camerer2011,
+  title={Behavioral game theory: Experiments in strategic interaction},
+  author={Camerer, Colin F},
+  year={2011},
+  publisher={Princeton university press}
+}
